# f1_analysis_visualization

./: .gitignore  LICENSE  Makefile  README.md  bd_loader_v1.ipynb  bd_loader_v2.ipynb  data.code-workspace  db_diagram_io.txt  db_loader copy 2.py  db_loader copy.py  db_loader_v1.py  db_loader_v2.py  packages.txt  pyproject.toml  requirements.txt  test.pptx
data(remove_before_usage)/raw/: second_color.csv
data_dashboard/: 2025-03-16_Australian_Grand_Prix.csv  2025-03-23_Chinese_Grand_Prix.csv  2025-04-06_Japanese_Grand_Prix.csv  2025-04-13_Bahrain_Grand_Prix.csv  2025-04-20_Saudi_Arabian_Grand_Prix.csv  2025-05-04_Miami_Grand_Prix.csv  2025-05-18_Emilia_Romagna_Grand_Prix.csv  2025-05-25_Monaco_Grand_Prix.csv  2025-06-01_Spanish_Grand_Prix.csv  2025-06-15_Canadian_Grand_Prix.csv  2025-06-29_Austrian_Grand_Prix.csv  2025-07-06_British_Grand_Prix.csv  2025-07-27_Belgian_Grand_Prix.csv  2025-08-03_Hungarian_Grand_Prix.csv  2025-08-31_Dutch_Grand_Prix.csv  2025-09-07_Italian_Grand_Prix.csv
docs/: mkdocs.yml
docs/docs/: index.md
media_processing/: pptx_to_jpeg.py
models/: practice.py  practice_v1.py  practice_v2.py  qual.py  qual_csv.py  qual_modules.py  qual_report.ipynb  qual_report.py  quarter_season_generator.py  quarter_season_recap.py  race.py  race_csv.py  race_modules.py  race_og.py  test.pptx
models/utils/: utils.py
models_auto/: auto.py  practice_1.py  practice_2.py  practice_3.py  quali.py  race.py  sprint.py  sprint_quali.py  testing_automation.ipynb
notebooks/: dashboard.py  post.py  pptx_to_png.py  qual_corner_advantage.ipynb  qual_create_bargraph.ipynb  qual_csv.ipynb  qual_driver_dif_per_lap.ipynb  qual_driver_lap.ipynb  qual_lap_info.ipynb  qual_plots.ipynb  qual_recap.ipynb  quarter_season_recap.ipynb  quarter_season_recap.py  race_laptime_comp.ipynb  race_modules.ipynb  race_recap.ipynb  race_show_laptime_scatterplot.ipynb  race_show_pace_comp.ipynb  race_show_tyre_strategy.ipynb
notebooks/dashboard/: app.py
notebooks/ml/: derived_estimation.ipynb  practice_data_2019.csv  practice_data_2020.csv  practice_data_2021.csv  practice_data_2022.csv  practice_data_2023.csv  practice_data_2024.csv  quali_prediction copy.ipynb  quali_prediction.ipynb
notebooks/modules/: qual_corner_advantage.ipynb  qual_driver_lap.ipynb
notebooks/practice/: practice.ipynb  practice_lap_info.ipynb
notebooks/qual/: qual_lap_info.ipynb  qual_plots copy.ipynb  qual_report.ipynb  qual_table.ipynb
notebooks/race/: race_lap_info.ipynb  race_report.ipynb  race_table.ipynb  team_radio.py
notebooks/tests/: API_key.txt  dashboard_widgets.ipynb  map_specific_lap.ipynb  meteo_api copy 2.ipynb  meteo_api copy.ipynb  race_recap_widgets.ipynb  team_radio.ipynb  team_radio.py
reports/1_Australian Grand Prix_2025/: 1_Q1_Qualifying.pptx  1_Q2_Qualifying.pptx  1_Q3_Qualifying.pptx  1_Race.pptx
reports/2_Chinese Grand Prix_2025/: 2_Q1_Qualifying.pptx  2_Q1_Sprint Qualifying.pptx  2_Q2_Qualifying.pptx  2_Q2_Sprint Qualifying.pptx  2_Q3_Qualifying.pptx  2_Q3_Sprint Qualifying.pptx  2_Race.pptx  2_Sprint.pptx
reports/2_Chinese Grand Prix_2025_Qualifying/: 2_Q1_Qualifying.pptx  2_Q2_Qualifying.pptx  2_Q3_Qualifying.pptx
reports/3_Japanese Grand Prix_2025/: 3_Q1_Qualifying.pptx  3_Q2_Qualifying.pptx  3_Q3_Qualifying.pptx  3_Race.pptx
reports/4_Bahrain Grand Prix_2025/: 4_Q1_Qualifying.pptx  4_Q2_Qualifying.pptx  4_Q3_Qualifying.pptx  4_Race.pptx
reports/5_Saudi Arabian Grand Prix_2025/: 5_Q1_Qualifying.pptx  5_Q2_Qualifying.pptx  5_Q3_Qualifying.pptx  5_Race.pptx
reports/6_Miami Grand Prix_2025/: 6_Q1_Qualifying.pptx  6_Q1_Sprint Qualifying.pptx  6_Q2_Qualifying.pptx  6_Q2_Sprint Qualifying.pptx  6_Q3_Qualifying.pptx  6_Q3_Sprint Qualifying.pptx  6_Race.pptx  6_Sprint.pptx
reports/csv/: 1_Q_drivers_info_Q1.csv  1_Q_drivers_info_Q2.csv  1_Q_drivers_info_Q3.csv  1_Q_drivers_info_corner_segments.csv  1_Q_drivers_info_delta_per_team.csv  1_R_race_info.csv  2_Q_drivers_info_Q1.csv  2_Q_drivers_info_Q2.csv  2_Q_drivers_info_Q3.csv  2_Q_drivers_info_corner_segments.csv  2_Q_drivers_info_delta_per_team.csv  2_R_race_info.csv  (+39 more)
(+65 files in other folders)
